[gd_scene load_steps=4 format=2]

[ext_resource path="res://FileDetailViewButton.gd" type="Script" id=1]
[ext_resource path="res://Assets/icon_directory.png" type="Texture" id=2]
[ext_resource path="res://white_rect_1x1_transparent.png" type="Texture" id=3]

[node name="FileDetailViewButton" type="TextureButton"]
anchor_right = 1.0
rect_min_size = Vector2( 30, 30 )
toggle_mode = true
texture_pressed = ExtResource( 3 )
expand = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 30 )
rect_rotation = 0.027279
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThumbnailTexture" type="TextureRect" parent="HBoxContainer"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 2 )
expand = true

[node name="FilenameLabel" type="Label" parent="HBoxContainer"]
margin_left = 34.0
margin_right = 534.0
margin_bottom = 30.0
rect_min_size = Vector2( 500, 30 )
text = "file name"
valign = 1

[node name="ModifiedDateLabel" type="Label" parent="HBoxContainer"]
margin_left = 538.0
margin_right = 619.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
text = "create date"
align = 1
valign = 1
